--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 services:
-  react-app:
-    build: ./react-app
-    ports:
-      - "5000:5000"
-  node-backend:
-    build: ./node-backend
-    ports:
-      - "3000:3000"
+#  react-app:
+#    build: ./react-app
+#    ports:
+#      - "5000:5000"
+#  node-backend:
+#    build: ./node-backend
+#    ports:
+#      - "3000:3000"
   python-program:
     build: ./python-program
