--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "axios": "^1.3.0"
+    "axios": "^1.3.0",
+    "mqtt": "^4.3.8"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
