Just moving stuff

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,20 +1,20 @@
 # Use an official Node runtime as a parent image
-FROM node:14
+FROM node:20
 
 # Set the working directory
 WORKDIR /app
 
 # Copy package.json and package-lock.json
-COPY package*.json ./
+COPY src/routes/package*.json ./
 
 # Install dependencies
 RUN npm install
 
 # Copy the rest of the application code
-COPY . .
-
-# Start the Node.js app
-CMD ["node", "index.js"]
+COPY src/routes ./
 
 # Expose the port the app runs on
-EXPOSE 3001
+EXPOSE 8000
+
+# Start the Node.js app
+CMD ["npm", "start"]
