--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,4 @@ services:
     environment:
       - CORS_ALLOWED_ORIGINS=http://your-frontend-domain.com
   python-program:
-    build: ./Python
+    build: ./Machines
