added mosquitto to serve as our MQTT endpoint

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,25 @@ services:
     build: ./Frontend
     ports:
       - "5000:5000"
+    depends_on:
+      - node-backend
+
   node-backend:
     build: ./Backend
     ports:
-      - "3000:3000"
+      - "3001:3001"
     environment:
       - CORS_ALLOWED_ORIGINS=http://localhost:5000
+      - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
+    depends_on:
+      - mqtt-broker
+
+  mqtt-broker:
+    image: eclipse-mosquitto:2
+    ports:
+      - "1883:1883"   # MQTT protocol
+      #- "9001:9001"    WebSocket support (optional)
+    volumes:
+      - ./mosquitto/config:/mosquitto/config
+      - ./mosquitto/data:/mosquitto/data
+      - ./mosquitto/log:/mosquitto/log
