--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "3001:3001"
     environment:
-      - CORS_ALLOWED_ORIGINS=http://localhost:5000
+#      - CORS_ALLOWED_ORIGINS=http://react-app:5000 # only allows frontend inputs, needs extra config for multiple origins
       - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
     depends_on:
       - mqtt-broker
