--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "3001:3001"
     environment:
-      - CORS_ALLOWED_ORIGINS=http://localhost:5001 # only allows frontend inputs, needs extra config for multiple origins
+      - CORS_ALLOWED_ORIGINS=http://localhost:5001 # only allows frontend html inputs, needs extra config for multiple origins
       - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
     depends_on:
       - mqtt-broker
