--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     environment:
       - CORS_ALLOWED_ORIGINS=http://localhost:5001 # only allows frontend html inputs, needs extra config for multiple origins
       - MQTT_BROKER_URL=mqtt://mqtt-broker:1883
+    volumes:
+      - ./Backend/data:/app/data
     depends_on:
       - mqtt-broker
 
